favicon banner overflow fix

--- a/main.css
+++ b/main.css
@@ -126,7 +126,7 @@
 
 .banner {
     width: 100%;
-    height: 50vh;
+    height: 70vh;
     color: white;
     overflow: hide;
 }
